--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                 <div class="about__container container grid">
                     <div class="about__data">
                         <h2 class="section__title about__title">Más información <br> Sobre Nosotros</h2>
-                        <p class="about__description">Puedes encontrar los lugares más bellos y agradables a los mejores 
-                            precios con descuentos especiales, tu eliges el lugar nosotros te guiamos durante todo el recorrido, consigue tu 
-                            lugar ahora.
+                        <p class="about__description">Somo una Empresa que busca ofrecer experiencias únicas
+                            que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
+                            observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
                         </p>
                         <a href="#" class="button">
-                            <i class="ri-group-fill"></i>
-                            Sobre Nosotros</a>
+                            <i class="ri-whatsapp-line"></i>
+                            Agendar</a>
                     </div>
 
                     <div class="about__img">
