--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/home.png" alt="" class="home__img">
+                <img src="assets/img/home_one.png" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
