--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/home_one.png" alt="" class="home__img">
+                <img src="assets/img/home.png" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
@@ -85,7 +85,7 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">Top 6 mejores sitios para visitar</span>
+                            <span class="home__info-title">Conoce nuestra ¡Nueva Ruta!</span>
                             <a href="#packs" class="button button--flex button--link home__info-button">
                                 Mostrar 
                                 <i class="ri-arrow-right-line"></i>
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="home__info-overlay">
-                            <img src="assets/img/lagocoatepeque-03.jpg" alt="" class="home__info-img">
+                            <img src="assets/img/home_one.png" alt="" class="home__info-img">
                         </div>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                         <div class="place__content">
                             <span class="place__rating">
                                 <i class="ri-star-line place__rating-icon"></i>
-                                <span class="place__rating-number">5,0</span>
+                                <span class="place__rating-number">Nueva</span>
                             </span>
 
                             <div class="place__data">
