--- a/planes/planUno.html
+++ b/planes/planUno.html
@@ -95,7 +95,7 @@
         <section>
             <div class="pricing">
                 <h3>Por:</h3>
-                <h1>$40.00</h1>
+                <h1>$30.00</h1>
                 <p>*Todos nuestros planes incluyen 1 comida gratis.</p>
             </div>
             <br>
@@ -150,10 +150,9 @@
             </div>
             <div class="box">
                 <h2>Sobre nosotros</h2>
-                <p>Como parte de un proyecto académico, surge la idea de preparar y consolidar
-                    una empresa que exporte y venda la imagen de El Salvador, al turista internacional
-                    y nacional ofreciendo servicios de guías turísticos, visitas a pueblos y viajes en 
-                    los bellos paisajes de El Salvador.
+                <p>Somo una Empresa que busca ofrecer experiencias únicas
+                            que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
+                            observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
                 </p>
             </div>
             <div class="box">
