--- a/planes/planUno.html
+++ b/planes/planUno.html
@@ -91,6 +91,8 @@
                 parque natural "Duendes del 
                 Gramalón", Parque de diversiones y Temático "Eco Parque Berlín" y Restaurante "Santa Fermina". (6 horas aproximadamente).
                 </li>
+                <br>
+                    <h3 class="days">*Estadía opcional durante los 3 días.</h3>
         </aside>
         <section>
             <div class="pricing">
@@ -150,9 +152,9 @@
             </div>
             <div class="box">
                 <h2>Sobre nosotros</h2>
-                <p>Somo una Empresa que busca ofrecer experiencias únicas
-                            que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
-                            observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
+                <p>Somos una Empresa que busca ofrecer experiencias únicas
+                     que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
+                    observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
                 </p>
             </div>
             <div class="box">
