--- a/planes/planDos.html
+++ b/planes/planDos.html
@@ -136,10 +136,9 @@
             </div>
             <div class="box">
                 <h2>Sobre nosotros</h2>
-                <p>Como parte de un proyecto académico, surge la idea de preparar y consolidar
-                    una empresa que exporte y venda la imagen de El Salvador, al turista internacional
-                    y nacional ofreciendo servicios de guías turísticos, visitas a pueblos y viajes en 
-                    los bellos paisajes de El Salvador.
+                <p>Somos una Empresa que busca ofrecer experiencias únicas
+                     que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
+                    observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
                 </p>
             </div>
             <div class="box">
