--- a/planes/planUno.html
+++ b/planes/planUno.html
@@ -102,27 +102,28 @@
             </div>
             <br>
             <h1 class="title">También Puedes Añadir</h1>
-            <div class="card-container">
+                        <div class="card-container">
                 <div class="card">
-                    <img src="../assets/img/packs/alegria/comida1.jpg" alt="">
+                    <img src="../assets/img/packs/alegria/ausoles-los-infiernillos-verapaz-san-vicente-el-salvador.jpg" alt="">
                     <div class="card-content">
-                        <h2>Desayuno y Almuerzo</h2>
-                        <p>Los visitantes disfrutarán de menús basados en
-                            ingredientes locales y orgánicos, promoviendo la 
-                            agricultura sostenible en la región.
+                        <h2>Ruta “Natural y de los Ausoles”</h2>
+                        <p>recorrido que comprende la Central Geotérmica, el Geo-resguardo de vida silvestre, parque natural 
+                            "Duendes del Gramalón", Parque de diversiones y Temático "Eco Parque Berlín" y Restaurante "Santa Fermina". 
+                            (6 horas aproximadamente).
                         </p>
-                        <h3>$3.00</h3>
+                        <h3>Incluido</h3>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../assets/img/packs/alegria/spa.jpg" alt="">
+                    <img src="../assets/img/packs/alegria/Laguna-de-Alegría-6.jpg" alt="">
                     <div class="card-content">
-                        <h2>Spa y Bienestar:</h2>
-                        <p>En los eco-lodges, los turistas tendrán acceso a tratamientos de spa
-                        que incorporan ingredientes naturales, como barro volcánico y aceites 
-                        esenciales locales.
+                        <h2>Laguna de Alegría</h2>
+                        <p>Después de las caminatas, los visitantes pueden relajarse en aguas 
+                            termales naturales, rodeadas de vegetación exuberante, beneficiándose 
+                            de sus propiedades curativas y relajantes, aprovechando de sacar las mejores
+                            postales para el recuerdo.
                         </p>
-                        <h3>$5.00</h3>
+                        <h3>Incluido</h3>
                     </div>
                 </div>
                 <div class="card">
@@ -133,7 +134,7 @@
                             tenemos actividades para que puedas disfrutar con tu familia y
                             amigos/as en nuestro campamento del Cerro La Cruz.
                         </p>
-
+                        <span class="typed"></span>
                         <h3>$10.00</h3>
                     </div>
                 </div>
