--- a/planes/planUno.html
+++ b/planes/planUno.html
@@ -98,7 +98,7 @@
             <div class="pricing">
                 <h3>Por:</h3>
                 <h1>$30.00</h1>
-                <p>*Todos nuestros planes incluyen 1 comida gratis.</p>
+                <p>*Precio incluye entradas a los lugares que se visiten</p>
             </div>
             <br>
             <h1 class="title">También Puedes Añadir</h1>
