--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="about__container container grid">
                     <div class="about__data">
                         <h2 class="section__title about__title">Más información <br> Sobre Nosotros</h2>
-                        <p class="about__description">Somo una Empresa que busca ofrecer experiencias únicas
+                        <p class="about__description">Somos una Empresa que busca ofrecer experiencias únicas
                             que permitan a los turistas conectar verdaderamente con los destinos, más allá de la mera 
                             observación, creando recuerdos duraderos y un impacto positivo en la comunidad local.
                         </p>
