--- a/planes/planUno.html
+++ b/planes/planUno.html
@@ -21,12 +21,13 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="../assets/img/packs/alegria/Acampar_en_el_bosque_rabbit75_ist.jpg"
+                <div class="swiper-slide"><img src="../assets/img/packs/alegria/fdpt12012022mlfot25.jpg_1081867746.webp"
                         alt=""></div>
                 <div class="swiper-slide"><img src="../assets/img/packs/alegria/Laguna-de-Alegría-edición-chris.jpg"
                         alt=""></div>
-                <div class="swiper-slide"><img src="../assets/img/packs/alegria/sopa-campesina-2.jpg" alt=""></div>
-                <div class="swiper-slide"><img src="../assets/img/packs/alegria/image2.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="../assets/img/packs/alegria/247385201_1365423313899159_6147568072466796499_n.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="../assets/img/packs/alegria/Mirador-de-las-Cien-Gradas.jpg" alt=""></div>
+                <div class="swiper-slide"><img src="../assets/img/packs/alegria/72959534_759643884474444_3988523436719734784_n.jpg" alt=""></div>
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
@@ -49,7 +50,7 @@
     </nav>
     <div class="row">
         <aside>
-            <h1 class="title">Ruta de Volcanes y Aguas Termales</h1>
+            <h1 class="title">Circuito Panorámico Berlín - Alegría - Santiago de María</h1>
             <br>
             <p>La "Ruta de los Volcanes y Aguas Termales" es una experiencia turística diseñada para combinar aventura y
                 relajación, aprovechando la geografía volcánica
