--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                             </span>
 
                             <div class="place__data">
-                                <h3 class="place__title">Ruta de Volcanes y Aguas Termales</h3>
-                                <span class="place__subtitle">Berlín-Alegría-Sngo. de María</span>
+                                <h3 class="place__title">Circuito Panorámico De</h3>
+                                <span class="place__subtitle">Berlín - Alegría - Santiago de María</span>
                                 <span class="place__price">$30.00</span>
                             </div>
                         </div>
