--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             </span>
 
                             <div class="place__data">
-                                <h3 class="place__title">Circuito Panorámico De</h3>
+                                <h3 class="place__title">Circuito Panorámico</h3>
                                 <span class="place__subtitle">Berlín - Alegría - Santiago de María</span>
                                 <span class="place__price">$30.00</span>
                             </div>
